--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - configspace >=0.4.14,<0.5
     - dask-core
     - distributed
+    - emcee >=3.0.0  # Needed for command line
     - joblib
     - numpy >=1.7.1
     - psutil
@@ -34,8 +35,6 @@ requirements:
     - scikit-learn >=0.22.0
     - scipy >=1.7.0
     - __linux
-  run_constrained:
-    - emcee >=3.0.0
 
 test:
   imports:
