--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,18 +22,17 @@ requirements:
     - pip
     - python >=3.7
   run:
-    - configspace >=0.4.14,<0.5
-    - dask-core
-    - distributed
-    - emcee >=3.0.0  # Needed for command line
-    - joblib
     - numpy >=1.7.1
+    - scipy>=1.7.0
     - psutil
-    - pynisher >=0.4.1
-    - pyrfr >=0.8.0
-    - python >=3.7
+    - pynisher>=0.4.1
+    - ConfigSpace >=0.5.0
+    - joblib
     - scikit-learn >=0.22.0
-    - scipy >=1.7.0
+    - pyrfr >=0.8.0
+    - dask
+    - distributed
+    - emcee >=3.0.0
     - __linux
 
 test:
