--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,7 +58,7 @@ about:
     performs better.
   license: BSD-3-Clause
   license_family: BSD
-  license_file: LICENSE
+  license_file: LICENSE.txt
   doc_url: https://automl.github.io/SMAC3/
   dev_url: https://github.com/automl/SMAC3
 
