--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "smac" %}
-{% set version = "1.4.0" %}
+{% set version = "1.2.0" %}
 
 
 package:
@@ -8,7 +8,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: c58260af5ac2b2cd50b74f879202d5b5890c25d81e4c528abb51045ef4c679f9
+  sha256: f98e2c6baa91dd275ca4f0fedb47a0d38fe5875564a0805b6b1c6b8866561c24
 
 build:
   number: 0
@@ -22,18 +22,15 @@ requirements:
     - pip
     - python >=3.7
   run:
-    - configspace >=0.5.0
-    - dask-core
-    - regex
     - numpy >=1.7.1
     - scipy >=1.7.0
     - psutil
-    - pynisher <1.0.0
-    - ConfigSpace >=0.5.0
+    - pynisher >=0.4.1
+    - ConfigSpace >=0.4.14,<0.5
     - joblib
     - scikit-learn >=0.22.0
-    - pyrfr >=0.8.3
-    - dask
+    - pyrfr >=0.8.0
+    - dask-core
     - distributed
     - emcee >=3.0.0
     - python >=3.7
