--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,20 +20,20 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python >=3.8
   run:
-    - numpy >=1.7.1
-    - scipy >=1.7.0
+    - numpy >=1.23.3
+    - scipy >=1.9.2
     - psutil
-    - pynisher >=0.4.1
-    - ConfigSpace >=0.4.14,<0.5
+    - pynisher >=1.0.0
+    - ConfigSpace >=0.6.1
     - joblib
-    - scikit-learn >=0.22.0
-    - pyrfr >=0.8.0
-    - dask-core
-    - distributed
+    - scikit-learn >=1.1.2
+    - pyrfr >=0.9.0
+    - dask
     - emcee >=3.0.0
-    - python >=3.7
+    - python >=3.8
+    - pyyaml
     - __linux
 
 test:
@@ -55,7 +55,7 @@ about:
     performs better.
   license: BSD-3-Clause
   license_family: BSD
-  license_file: LICENSE
+  license_file: LICENSE.txt
   doc_url: https://automl.github.io/SMAC3/
   dev_url: https://github.com/automl/SMAC3
 
